# MagicSetEditor2

./: .editorconfig  .gitignore  BUNDLED_README.txt  CHANGES.md  CMakeLists.txt  CMakeSettings.json  README.md  mse-set.icns  mse.icns  package.ps1
.github/workflows/: build.yml  macos.yml
data/ch-s.mse-locale/: locale
data/ch-t.mse-locale/: locale
data/da.mse-locale/: locale
data/de.mse-locale/: locale
data/en.mse-locale/: locale
data/es.mse-locale/: locale
data/fr.mse-locale/: locale
data/it.mse-locale/: locale
data/jp.mse-locale/: locale
data/magic-blends.mse-include/: new-blends
data/magic.mse-game/: add_cards_scripts  card_fields  script  set_fields  word_lists
data/pl.mse-locale/: locale
data/pt-br.mse-locale/: locale
doc/function/: exists_in_package.txt  extra_data.txt  get_card_styling.txt  index.txt
doc/script/: predefined_variables.txt
resource/: win32_res.rc
src/: main.cpp
src/data/: card.cpp  card.hpp  card_region.cpp  card_region.hpp  field.cpp  field.hpp  font.cpp  font.hpp  locale.cpp  settings.cpp  settings.hpp  stylesheet.cpp  stylesheet.hpp
src/data/format/: formats.hpp  image.cpp
src/gfx/: blend_image.cpp  combine_image.cpp  generated_image.cpp  generated_image.hpp  gfx.hpp
src/gui/: about_window.cpp  image_slice_window.cpp  image_slice_window.hpp  new_window.cpp  new_window.hpp  preferences_window.cpp  print_window.cpp  util.cpp  welcome_window.cpp  welcome_window.hpp
src/gui/control/: card_list.cpp  card_viewer.cpp  gallery_list.cpp  item_list.cpp  keyword_list.cpp  native_look_editor.cpp  native_look_editor.hpp  package_list.cpp  package_list.hpp
src/gui/set/: cards_panel.cpp  console_panel.cpp  console_panel.hpp  set_info_panel.cpp  stats_panel.cpp  style_panel.cpp  style_panel.hpp
src/gui/symbol/: part_list.cpp
src/gui/value/: choice.cpp  image.cpp  text.cpp
src/render/text/: element.cpp  viewer.cpp
src/render/value/: image.cpp  information.cpp
src/script/: parser.cpp  script.cpp  script.hpp  script_manager.cpp
src/script/functions/: basic.cpp  editor.cpp  export.cpp  image.cpp
src/util/: error.cpp  locale.hpp  spell_checker.hpp  tagged_string.cpp  version.cpp  window_id.hpp
src/util/io/: package.cpp  package.hpp  package_manager.cpp  package_manager.hpp
tools/locale/: merge.pl
tools/website/drupal/mse-drupal-modules/: highlight.inc
